MOCPParser.py
# Generated from MOCP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MOCPParser ( Parser ):

    grammarFileName = "MOCP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inteiro'", "'real'", "'vazio'", "'principal'", 
                     "'se'", "'senao'", "'enquanto'", "'para'", "'retornar'", 
                     "'ler'", "'lerc'", "'lers'", "'escrever'", "'escreverc'", 
                     "'escreverv'", "'escrevers'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='", "'&&'", "'||'", "'!'", "'='", "','", "';'", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "VOID", "MAIN", "IF", 
                      "ELSE", "WHILE", "FOR", "RETURN", "READ", "READC", 
                      "READS", "WRITE", "WRITEC", "WRITEV", "WRITES", "PLUS", 
                      "MINUS", "MULT", "DIV", "MOD", "LT", "LE", "GT", "GE", 
                      "EQ", "NEQ", "AND", "OR", "NOT", "ASSIGN", "COMMA", 
                      "SEMI_COLON", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
                      "LPAREN", "RPAREN", "FORBIDDEN_OPERATOR", "FORBIDDEN_KEYWORD", 
                      "STRING_LITERAL", "REAL_NUM", "NUMBER", "IDENTIFIER", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_prototypes = 1
    RULE_body = 2
    RULE_unit = 3
    RULE_prototype = 4
    RULE_mainPrototype = 5
    RULE_mainFunction = 6
    RULE_functionDef = 7
    RULE_prototypeParameters = 8
    RULE_defParameters = 9
    RULE_parameterPrototype = 10
    RULE_parameterDef = 11
    RULE_type = 12
    RULE_returnType = 13
    RULE_declaration = 14
    RULE_variableList = 15
    RULE_variable = 16
    RULE_arrayBlock = 17
    RULE_valueList = 18
    RULE_expression = 19
    RULE_expressionOr = 20
    RULE_expressionAnd = 21
    RULE_expressionEquality = 22
    RULE_equalityOp = 23
    RULE_expressionRelational = 24
    RULE_relationalOp = 25
    RULE_expressionAdd = 26
    RULE_expressionMul = 27
    RULE_expressionUnary = 28
    RULE_castExpr = 29
    RULE_primary = 30
    RULE_functionCall = 31
    RULE_arguments = 32
    RULE_block = 33
    RULE_statement = 34
    RULE_whileStatement = 35
    RULE_forStatement = 36
    RULE_expressionOrAssign = 37
    RULE_writeStatement = 38
    RULE_returnStatement = 39
    RULE_assignStatement = 40
    RULE_expressionStatement = 41
    RULE_stringArgument = 42

    ruleNames =  [ "program", "prototypes", "body", "unit", "prototype", 
                   "mainPrototype", "mainFunction", "functionDef", "prototypeParameters", 
                   "defParameters", "parameterPrototype", "parameterDef", 
                   "type", "returnType", "declaration", "variableList", 
                   "variable", "arrayBlock", "valueList", "expression", 
                   "expressionOr", "expressionAnd", "expressionEquality", 
                   "equalityOp", "expressionRelational", "relationalOp", 
                   "expressionAdd", "expressionMul", "expressionUnary", 
                   "castExpr", "primary", "functionCall", "arguments", "block", 
                   "statement", "whileStatement", "forStatement", "expressionOrAssign", 
                   "writeStatement", "returnStatement", "assignStatement", 
                   "expressionStatement", "stringArgument" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    VOID=3
    MAIN=4
    IF=5
    ELSE=6
    WHILE=7
    FOR=8
    RETURN=9
    READ=10
    READC=11
    READS=12
    WRITE=13
    WRITEC=14
    WRITEV=15
    WRITES=16
    PLUS=17
    MINUS=18
    MULT=19
    DIV=20
    MOD=21
    LT=22
    LE=23
    GT=24
    GE=25
    EQ=26
    NEQ=27
    AND=28
    OR=29
    NOT=30
    ASSIGN=31
    COMMA=32
    SEMI_COLON=33
    LBRACKET=34
    RBRACKET=35
    LBRACE=36
    RBRACE=37
    LPAREN=38
    RPAREN=39
    FORBIDDEN_OPERATOR=40
    FORBIDDEN_KEYWORD=41
    STRING_LITERAL=42
    REAL_NUM=43
    NUMBER=44
    IDENTIFIER=45
    BLOCK_COMMENT=46
    LINE_COMMENT=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prototypes(self):
            return self.getTypedRuleContext(MOCPParser.PrototypesContext,0)


        def body(self):
            return self.getTypedRuleContext(MOCPParser.BodyContext,0)


        def EOF(self):
            return self.getToken(MOCPParser.EOF, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MOCPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.prototypes()
            self.state = 87
            self.body()
            self.state = 88
            self.match(MOCPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainPrototype(self):
            return self.getTypedRuleContext(MOCPParser.MainPrototypeContext,0)


        def prototype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.PrototypeContext)
            else:
                return self.getTypedRuleContext(MOCPParser.PrototypeContext,i)


        def getRuleIndex(self):
            return MOCPParser.RULE_prototypes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototypes" ):
                listener.enterPrototypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototypes" ):
                listener.exitPrototypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototypes" ):
                return visitor.visitPrototypes(self)
            else:
                return visitor.visitChildren(self)




    def prototypes(self):

        localctx = MOCPParser.PrototypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prototypes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 90
                    self.prototype() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 96
            self.mainPrototype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainFunction(self):
            return self.getTypedRuleContext(MOCPParser.MainFunctionContext,0)


        def unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.UnitContext)
            else:
                return self.getTypedRuleContext(MOCPParser.UnitContext,i)


        def getRuleIndex(self):
            return MOCPParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MOCPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.unit() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 104
            self.mainFunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(MOCPParser.FunctionDefContext,0)


        def declaration(self):
            return self.getTypedRuleContext(MOCPParser.DeclarationContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = MOCPParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_unit)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.functionDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(MOCPParser.ReturnTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(MOCPParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def SEMI_COLON(self):
            return self.getToken(MOCPParser.SEMI_COLON, 0)

        def prototypeParameters(self):
            return self.getTypedRuleContext(MOCPParser.PrototypeParametersContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_prototype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototype" ):
                listener.enterPrototype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototype" ):
                listener.exitPrototype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototype" ):
                return visitor.visitPrototype(self)
            else:
                return visitor.visitChildren(self)




    def prototype(self):

        localctx = MOCPParser.PrototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_prototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.returnType()
            self.state = 111
            self.match(MOCPParser.IDENTIFIER)
            self.state = 112
            self.match(MOCPParser.LPAREN)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 113
                self.prototypeParameters()


            self.state = 116
            self.match(MOCPParser.RPAREN)
            self.state = 117
            self.match(MOCPParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainPrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.VOID)
            else:
                return self.getToken(MOCPParser.VOID, i)

        def MAIN(self):
            return self.getToken(MOCPParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def SEMI_COLON(self):
            return self.getToken(MOCPParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return MOCPParser.RULE_mainPrototype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainPrototype" ):
                listener.enterMainPrototype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainPrototype" ):
                listener.exitMainPrototype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainPrototype" ):
                return visitor.visitMainPrototype(self)
            else:
                return visitor.visitChildren(self)




    def mainPrototype(self):

        localctx = MOCPParser.MainPrototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mainPrototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MOCPParser.VOID)
            self.state = 120
            self.match(MOCPParser.MAIN)
            self.state = 121
            self.match(MOCPParser.LPAREN)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 122
                self.match(MOCPParser.VOID)


            self.state = 125
            self.match(MOCPParser.RPAREN)
            self.state = 126
            self.match(MOCPParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.VOID)
            else:
                return self.getToken(MOCPParser.VOID, i)

        def MAIN(self):
            return self.getToken(MOCPParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MOCPParser.BlockContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_mainFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainFunction" ):
                listener.enterMainFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainFunction" ):
                listener.exitMainFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainFunction" ):
                return visitor.visitMainFunction(self)
            else:
                return visitor.visitChildren(self)




    def mainFunction(self):

        localctx = MOCPParser.MainFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mainFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MOCPParser.VOID)
            self.state = 129
            self.match(MOCPParser.MAIN)
            self.state = 130
            self.match(MOCPParser.LPAREN)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 131
                self.match(MOCPParser.VOID)


            self.state = 134
            self.match(MOCPParser.RPAREN)
            self.state = 135
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(MOCPParser.ReturnTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(MOCPParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(MOCPParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MOCPParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MOCPParser.BlockContext,0)


        def defParameters(self):
            return self.getTypedRuleContext(MOCPParser.DefParametersContext,0)


        def getRuleIndex(self):
            return MOCPParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = MOCPParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.returnType()
            self.state = 138
            self.match(MOCPParser.IDENTIFIER)
            self.state = 139
            self.match(MOCPParser.LPAREN)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 140
                self.defParameters()


            self.state = 143
            self.match(MOCPParser.RPAREN)
            self.state = 144
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototypeParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MOCPParser.VOID, 0)

        def parameterPrototype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MOCPParser.ParameterPrototypeContext)
            else:
                return self.getTypedRuleContext(MOCPParser.ParameterPrototypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MOCPParser.COMMA)
            else:
                return self.getToken(MOCPParser.COMMA, i)

        def getRuleIndex(self):
            return MOCPParser.RULE_prototypeParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototypeParameters" ):
                listener.enterPrototypeParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototypeParameters" ):
                listener.exitPrototypeParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototypeParameters" ):
                return visitor.visitPrototypeParameters(self)
            else:
                return visitor.visitChildren(self)




    def prototypeParameters(self):

        localctx = MOCPParser.PrototypeParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_prototypeParameters)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MOCPParser.VOID)
                pass
            elif token in [1, 2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.parameterPrototype()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==32:
                    self.state = 148
                    self.match(MOCPParser.COMMA)
                    self.state = 149
                    self.parameterPrototype()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

